# FunpayParser

./: main.py  pyproject.toml  requirements.txt
src/: schemas.py  scraper.py
src/utils/: cooldown_manager.py  csvgen.py
