[project]
name = "funpayscraper"
version = "0.1.0"
description = ""
authors = [
    {name = "ArsLogica",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "fake-headers (>=1.0.2,<2.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
